Basic Slint setup

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2024"
 [dependencies]
 clap = { version = "4.5.48", features = ["derive"] }
 rug = "1.28.0"
+slint = "1.13.1"
+
+[build-dependencies]
+slint-build = "1.13.1"
